--- a/Post_Space_Java/src/main/resources/application.properties
+++ b/Post_Space_Java/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
